--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
         "watch": "webpack --watch"
     },
     "dependencies": {
+        "@babel/plugin-transform-runtime": "^7.19.6",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.18.6",
         "@bem-react/classname": "^1.5.12",
+        "@jest/globals": "^27.3.0",
+        "@testing-library/jest-dom": "^5.16.5",
         "axios": "^0.23.0",
         "bootstrap": "^5.1.3",
         "chai": "^4.3.4",
@@ -26,6 +32,8 @@
         "rxjs": "^7.4.0"
     },
     "devDependencies": {
+        "@testing-library/dom": "^8.19.0",
+        "@testing-library/react": "^12.1.2",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.9",
         "@types/mini-css-extract-plugin": "^2.3.0",
@@ -49,5 +57,8 @@
         "typescript": "^4.4.4",
         "webpack": "^5.58.2",
         "webpack-cli": "^4.9.0"
+    },
+    "jest":{
+        "testEnvironment": "jsdom"
     }
 }
