--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
         "start": "nodemon ./src/server/index.ts",
         "test": "jest",
         "build": "webpack --mode=production --node-env=production",
-        "watch": "webpack --watch"
+        "watch": "webpack --watch",
+        "herm": "hermione test/hermione",
+        "herm:update": "hermione --update-refs test/hermione"
     },
     "dependencies": {
         "@babel/plugin-transform-runtime": "^7.19.6",
@@ -29,7 +31,8 @@
         "react-router-dom": "^5.3.0",
         "redux": "^4.1.1",
         "redux-observable": "^2.0.0",
-        "rxjs": "^7.4.0"
+        "rxjs": "^7.4.0",
+        "ts-node-dev": "^2.0.0"
     },
     "devDependencies": {
         "@testing-library/dom": "^8.19.0",
@@ -45,6 +48,7 @@
         "@types/react-router-dom": "^5.3.1",
         "@types/webpack": "^5.28.0",
         "css-loader": "^6.3.0",
+        "hermione": "^5.4.1",
         "html-webpack-plugin": "^5.3.2",
         "jest": "^27.3.0",
         "mini-css-extract-plugin": "^2.4.2",
@@ -53,12 +57,12 @@
         "sass-loader": "^12.1.0",
         "style-loader": "^3.3.0",
         "ts-loader": "^9.2.6",
-        "ts-node": "^10.3.0",
+        "ts-node": "^10.9.1",
         "typescript": "^4.4.4",
         "webpack": "^5.58.2",
         "webpack-cli": "^4.9.0"
     },
-    "jest":{
+    "jest": {
         "testEnvironment": "jsdom"
     }
 }
