--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "test": "jest",
         "build": "webpack --mode=production --node-env=production",
         "watch": "webpack --watch",
-        "herm": "hermione test/hermione",
+        "herm": "hermione test/hermione/",
         "herm:update": "hermione --update-refs test/hermione"
     },
     "dependencies": {
@@ -49,6 +49,7 @@
         "@types/webpack": "^5.28.0",
         "css-loader": "^6.3.0",
         "hermione": "^5.4.1",
+        "html-reporter": "^9.4.0",
         "html-webpack-plugin": "^5.3.2",
         "jest": "^27.3.0",
         "mini-css-extract-plugin": "^2.4.2",
